[package]
name = "aave_craft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aave_craft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mpl-token-metadata = {version="1.9.1",features = ["no-entrypoint"]}
mpl-token-auth-rules= {version="1.2.0",features=["no-entrypoint"]}
anchor-lang = {version="0.28.0",features=["init-if-needed"]}
anchor-spl = "0.28.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"
itertools = "0.11.0"
blake3 = "=1.3.1"
